@@ -5,22 +5,23 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import com.kavya.hrms.model.AppUser;
-import com.kavya.hrms.model.Employee;
-import com.kavya.hrms.repository.AppUserRepository;
-import com.kavya.hrms.repository.EmployeeRepository;
-import com.kavya.hrms.service.EmployeeWelcomeEmailService;
-import com.kavya.hrms.service.NotificationService;
-import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+
+import com.kavya.hrms.model.Employee;
+import com.kavya.hrms.model.AppUser;
+import com.kavya.hrms.repository.AppUserRepository;
+import com.kavya.hrms.repository.EmployeeRepository;
+import com.kavya.hrms.service.EmployeeWelcomeEmailService;
+import com.kavya.hrms.service.NotificationService;
 
 @ExtendWith(MockitoExtension.class)
 class EmployeeControllerTest {
@@ -40,6 +41,7 @@ class EmployeeControllerTest {
   private EmployeeController employeeController;
 
   @Test
+  @SuppressWarnings("null")
   void updateShouldResetLinkedUserCredentialsAndSendCredentialEmail() {
     Employee employee = buildEmployee("KV009", "Riya", "Shah", "Engineering");
     AppUser user = new AppUser();
@@ -51,9 +53,9 @@ class EmployeeControllerTest {
     user.setPasswordResetTokenExpiresAt("2099-01-01T00:00:00Z");
     user.setMustChangePassword(false);
 
-    when(employeeRepository.save(any(Employee.class))).thenAnswer(invocation -> invocation.getArgument(0));
-    when(appUserRepository.findAll()).thenReturn(List.of(user));
-    when(appUserRepository.save(any(AppUser.class))).thenAnswer(invocation -> invocation.getArgument(0));
+    doReturn(employee).when(employeeRepository).save(employee);
+    when(appUserRepository.findAll()).thenReturn(java.util.Collections.singletonList(user));
+    doReturn(user).when(appUserRepository).save(user);
     when(employeeWelcomeEmailService.buildLoginEmail(any(Employee.class))).thenReturn("riya.shah@kavyainfoweb.com");
     when(employeeWelcomeEmailService.buildTemporaryPassword(any(Employee.class))).thenReturn("Riya@123");
 
@@ -72,6 +74,7 @@ class EmployeeControllerTest {
   }
 
   @Test
+  @SuppressWarnings("null")
   void bulkSaveShouldSendCredentialUpdateOnlyForRequestedEmployee() {
     Employee existingTarget = buildEmployee("KV009", "Riya", "Shah", "Engineering");
     Employee existingOther = buildEmployee("KV010", "Arjun", "Mehta", "Engineering");
@@ -82,15 +85,16 @@ class EmployeeControllerTest {
     targetUser.setEmployeeId("KV009");
     targetUser.setEmail("old.riya@kavyainfoweb.com");
 
-    when(employeeRepository.findAll()).thenReturn(List.of(existingTarget, existingOther));
-    when(employeeRepository.saveAll(any())).thenAnswer(invocation -> invocation.getArgument(0));
-    when(appUserRepository.findAll()).thenReturn(List.of(targetUser));
-    when(appUserRepository.save(any(AppUser.class))).thenAnswer(invocation -> invocation.getArgument(0));
+    when(employeeRepository.findAll()).thenReturn(java.util.Arrays.asList(existingTarget, existingOther));
+    doReturn(java.util.Arrays.asList(updatedTarget, updatedOther))
+        .when(employeeRepository).saveAll(java.util.Arrays.asList(updatedTarget, updatedOther));
+    when(appUserRepository.findAll()).thenReturn(java.util.Collections.singletonList(targetUser));
+    doReturn(targetUser).when(appUserRepository).save(targetUser);
     when(employeeWelcomeEmailService.buildLoginEmail(any(Employee.class))).thenReturn("riya.shah@kavyainfoweb.com");
     when(employeeWelcomeEmailService.buildTemporaryPassword(any(Employee.class))).thenReturn("Riya@123");
 
     employeeController.bulkSave(
-        List.of(updatedTarget, updatedOther),
+        java.util.Arrays.asList(updatedTarget, updatedOther),
         "HR Manager",
         "HR-001",
         "true",
